[gd_scene load_steps=22 format=2]

[ext_resource path="res://Maps/Basketball/Hoop.gd" type="Script" id=1]
[ext_resource path="res://Maps/Basketball/Score.gd" type="Script" id=2]
[ext_resource path="res://fonts/kirifont/Kirifont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Items/Tool_Spawner.gd" type="Script" id=4]
[ext_resource path="res://Maps/Basketball/Net_Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://Maps/Basketball/Progress_Goal.tres" type="Material" id=6]
[ext_resource path="res://Maps/Vertical_Parkour/Death_Zone.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 3, 1000 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 1500, 33 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 191.936, 1012.75 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 191.936, 177.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1875, 250 )

[sub_resource type="PhysicsMaterial" id=26]
bounce = 1.0
absorbent = true

[sub_resource type="CapsuleShape2D" id=18]

[sub_resource type="PhysicsMaterial" id=27]
bounce = 0.5

[sub_resource type="CircleShape2D" id=12]
radius = 18.0

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 0.870588, 0.34902, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 7
anti_aliasing = false

[sub_resource type="PhysicsMaterial" id=28]
rough = true
bounce = 37.04
absorbent = true

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 0.870588, 0.34902, 1 )
corner_radius_top_left = 15
corner_radius_bottom_left = 10
corner_detail = 9
anti_aliasing = false

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 696, 2325.5 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 2308, 690.5 )

[node name="Stadium" type="Node2D"]
position = Vector2( 0, -370 )

[node name="Left_Background" type="ColorRect" parent="."]
margin_top = -1565.0
margin_right = 1530.0
margin_bottom = 414.0
color = Color( 0.615686, 0.901961, 0.921569, 1 )

[node name="Right_Background" type="ColorRect" parent="."]
margin_left = -1530.0
margin_top = -1565.0
margin_bottom = 414.0
color = Color( 0.717647, 0.913725, 0.933333, 1 )

[node name="Seperator" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Vertical_Boundary" type="CollisionShape2D" parent="Seperator"]
position = Vector2( 0, -334 )
shape = SubResource( 22 )

[node name="Horizontal_Boundary2" type="StaticBody2D" parent="Seperator"]
collision_layer = 31
collision_mask = 31

[node name="Horizontal_Boundary2" type="CollisionShape2D" parent="Seperator/Horizontal_Boundary2"]
position = Vector2( 0, -1376 )
shape = SubResource( 21 )

[node name="Tool_Spawner" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Walls" type="StaticBody2D" parent="." groups=["stabb-able"]]

[node name="ColorRect3" type="ColorRect" parent="Walls"]
margin_left = 1490.0
margin_top = -2217.0
margin_right = 1874.0
margin_bottom = 656.0
size_flags_horizontal = 5
size_flags_vertical = 3
color = Color( 0.407843, 0.529412, 0.74902, 1 )

[node name="ColorRect2" type="ColorRect" parent="Walls"]
margin_left = -1875.0
margin_top = -2221.0
margin_right = -1491.0
margin_bottom = 652.0
size_flags_horizontal = 5
size_flags_vertical = 3
color = Color( 0.407843, 0.529412, 0.74902, 1 )

[node name="Wall_left" type="CollisionShape2D" parent="Walls"]
position = Vector2( -1683, -1207.75 )
shape = SubResource( 29 )

[node name="Wall_left_Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( -1683, 195.5 )
shape = SubResource( 30 )

[node name="Wall_right" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1682, -1207.75 )
shape = SubResource( 29 )

[node name="Wall_right_Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1682, 195.5 )
shape = SubResource( 30 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 370 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 0, 250 )
shape = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Floor"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1875.0
margin_right = 1875.0
margin_bottom = 500.0
color = Color( 1, 0.824, 0.78, 1 )

[node name="Hoop_left" type="Node2D" parent="."]
position = Vector2( -1491, 0 )
script = ExtResource( 1 )

[node name="Hoop_Goal" type="Area2D" parent="Hoop_left"]
position = Vector2( 128, 28 )
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hoop_left/Hoop_Goal"]
position = Vector2( -3, -18 )
scale = Vector2( 1.99352, 1 )
polygon = PoolVector2Array( 49.6609, -10.0002, 41.1333, 28.9998, 27.0878, 55.9999, 10.0327, 66.9999, -20, 66, -30.5991, 51.0002, -40.1299, 27.0002, -47.1528, -9.99976 )

[node name="Nets" type="Node2D" parent="Hoop_left"]

[node name="Net" type="RigidBody2D" parent="Hoop_left/Nets"]
position = Vector2( 240, 26 )
rotation = 3.50817
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net"]
position = Vector2( 0, -16 )
node_a = NodePath("../../../Front_Bumper")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 10.1541, 2.9557 )
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_left/Nets/Net"]
position = Vector2( 3.42871, 31.3628 )
rotation = -0.174533
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net3" type="RigidBody2D" parent="Hoop_left/Nets/Net/Net2"]
position = Vector2( 12.8318, 27.6206 )
rotation = -0.808422
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net/Net2/Net3"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net/Net2/Net3"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net/Net2/Net3"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net4" type="RigidBody2D" parent="Hoop_left/Nets/Net/Net2/Net3"]
position = Vector2( -4.89664, 30.2102 )
rotation = 0.275978
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net/Net2/Net3/Net4"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net/Net2/Net3/Net4"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net/Net2/Net3/Net4"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net5" type="RigidBody2D" parent="Hoop_left/Nets/Net/Net2/Net3/Net4"]
position = Vector2( 15.5, 16.1666 )
rotation = -1.3403
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net/Net2/Net3/Net4/Net5"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net/Net2/Net3/Net4/Net5"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net/Net2/Net3/Net4/Net5"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_left/Nets"]
position = Vector2( 15, 26 )
rotation = 2.75527
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../../../Backboard")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 10.1541, 2.9557 )
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_left/Nets/Net2"]
position = Vector2( -10.4506, 27.6009 )
rotation = 0.630071
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net2/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net2/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net2/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net3" type="RigidBody2D" parent="Hoop_left/Nets/Net2/Net2"]
position = Vector2( -3.88458, 30.5128 )
rotation = 0.240007
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net2/Net2/Net3"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net2/Net2/Net3"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net2/Net2/Net3"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net4" type="RigidBody2D" parent="Hoop_left/Nets/Net2/Net2/Net3"]
position = Vector2( -4.64142, 31.5685 )
rotation = 0.287285
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net5" type="RigidBody2D" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4"]
position = Vector2( 0.244141, 31.857 )
rotation = -0.0153155
physics_material_override = SubResource( 26 )
linear_damp = 2.0
angular_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4/Net5"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4/Net5"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_left/Nets/Net2/Net2/Net3/Net4/Net5"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_left/Nets"]
position = Vector2( 141, 67 )
node_a = NodePath("../Net2/Net2/Net3/Net4/Net5")
node_b = NodePath("../Net/Net2/Net3/Net4/Net5")

[node name="Front_Bumper" type="StaticBody2D" parent="Hoop_left"]
position = Vector2( 246, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 27 )

[node name="Front_Bumper" type="CollisionShape2D" parent="Hoop_left/Front_Bumper"]
shape = SubResource( 12 )

[node name="Panel" type="Panel" parent="Hoop_left/Front_Bumper/Front_Bumper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -18.0
margin_right = 18.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 24 )

[node name="Backboard" type="StaticBody2D" parent="Hoop_left"]
position = Vector2( 10, -63 )
rotation = 3.14159
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 28 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hoop_left/Backboard"]
polygon = PoolVector2Array( 9.99963, -132, 3.99963, -132, 0.999634, -131, -3.00037, -129, -5.00037, -127, -8.00037, -123, -9.00037, -119, -8.99988, 72, -6.99988, 77, -3.99988, 80, 1.00012, 81, 10.0001, 81, 394, 80.999, 394, -132.001 )

[node name="Panel" type="Panel" parent="Hoop_left/Backboard"]
margin_left = -9.0
margin_top = -132.0
margin_right = 10.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 23 )

[node name="Timer" type="Timer" parent="Hoop_left"]
process_mode = 0
wait_time = 2.0

[node name="Hoop_right" type="Node2D" parent="."]
position = Vector2( 1491, 0 )
scale = Vector2( -1, 1 )
script = ExtResource( 1 )

[node name="Hoop_Goal" type="Area2D" parent="Hoop_right"]
position = Vector2( 128, 28 )
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hoop_right/Hoop_Goal"]
position = Vector2( -3, -18 )
scale = Vector2( 1.99352, 1 )
polygon = PoolVector2Array( 49.6609, -10.0002, 41.1333, 28.9998, 27.0878, 55.9999, 10.0327, 66.9999, -20, 66, -30.5991, 51.0002, -40.1299, 27.0002, -47.1528, -9.99976 )

[node name="Nets" type="Node2D" parent="Hoop_right"]

[node name="Net" type="RigidBody2D" parent="Hoop_right/Nets"]
position = Vector2( 240, 26 )
rotation = 3.50817
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net"]
position = Vector2( 0, -16 )
node_a = NodePath("../../../Front_Bumper")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 10.1541, 2.9557 )
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_right/Nets/Net"]
position = Vector2( 3.42871, 31.3628 )
rotation = -0.174533
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net3" type="RigidBody2D" parent="Hoop_right/Nets/Net/Net2"]
position = Vector2( 12.8318, 27.6206 )
rotation = -0.808422
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net/Net2/Net3"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net/Net2/Net3"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net/Net2/Net3"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net4" type="RigidBody2D" parent="Hoop_right/Nets/Net/Net2/Net3"]
position = Vector2( -4.89664, 30.2102 )
rotation = 0.275978
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net/Net2/Net3/Net4"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net/Net2/Net3/Net4"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net/Net2/Net3/Net4"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net5" type="RigidBody2D" parent="Hoop_right/Nets/Net/Net2/Net3/Net4"]
position = Vector2( 15.5, 16.1666 )
rotation = -1.3403
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net/Net2/Net3/Net4/Net5"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net/Net2/Net3/Net4/Net5"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net/Net2/Net3/Net4/Net5"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_right/Nets"]
position = Vector2( 15, 26 )
rotation = 2.75527
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../../../Backboard")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 10.1541, 2.9557 )
custom_styles/panel = ExtResource( 5 )

[node name="Net2" type="RigidBody2D" parent="Hoop_right/Nets/Net2"]
position = Vector2( -10.4506, 27.6009 )
rotation = 0.630071
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net2/Net2"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net2/Net2"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net2/Net2"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net3" type="RigidBody2D" parent="Hoop_right/Nets/Net2/Net2"]
position = Vector2( -3.88458, 30.5128 )
rotation = 0.240007
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net2/Net2/Net3"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net2/Net2/Net3"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net2/Net2/Net3"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net4" type="RigidBody2D" parent="Hoop_right/Nets/Net2/Net2/Net3"]
position = Vector2( -4.64142, 31.5685 )
rotation = 0.287285
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="Net5" type="RigidBody2D" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4"]
position = Vector2( 0.244141, 31.857 )
rotation = -0.0153155
physics_material_override = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4/Net5"]
shape = SubResource( 18 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4/Net5"]
position = Vector2( 0, -16 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Panel" type="Panel" parent="Hoop_right/Nets/Net2/Net2/Net3/Net4/Net5"]
margin_left = -10.0
margin_top = -19.0
margin_right = 10.0
margin_bottom = 16.0
custom_styles/panel = ExtResource( 5 )

[node name="PinJoint2D" type="PinJoint2D" parent="Hoop_right/Nets"]
position = Vector2( 141, 67 )
node_a = NodePath("../Net2/Net2/Net3/Net4/Net5")
node_b = NodePath("../Net/Net2/Net3/Net4/Net5")

[node name="Front_Bumper" type="StaticBody2D" parent="Hoop_right"]
position = Vector2( 246, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 27 )

[node name="Front_Bumper" type="CollisionShape2D" parent="Hoop_right/Front_Bumper"]
shape = SubResource( 12 )

[node name="Panel" type="Panel" parent="Hoop_right/Front_Bumper/Front_Bumper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -18.0
margin_right = 18.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 24 )

[node name="Backboard" type="StaticBody2D" parent="Hoop_right"]
position = Vector2( 10, -63 )
rotation = 3.14159
scale = Vector2( 1, -1 )
physics_material_override = SubResource( 28 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hoop_right/Backboard"]
polygon = PoolVector2Array( 9.99963, -132, 3.99963, -132, 0.999634, -131, -3.00037, -129, -5.00037, -127, -8.00037, -123, -9.00037, -119, -8.99988, 72, -6.99988, 77, -3.99988, 80, 1.00012, 81, 10.0001, 81, 393, 81.999, 393, -132.001 )

[node name="Panel" type="Panel" parent="Hoop_right/Backboard"]
material = ExtResource( 6 )
margin_left = -9.0
margin_top = -132.0
margin_right = 10.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 23 )

[node name="Timer" type="Timer" parent="Hoop_right"]
process_mode = 0
wait_time = 2.0

[node name="Score" type="Label" parent="."]
margin_left = -645.0
margin_top = -1353.0
margin_right = 583.0
margin_bottom = -893.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "0 -0"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="Spawns" type="Node2D" parent="."]
position = Vector2( 0, 490 )

[node name="P1_Spawn" type="Position2D" parent="Spawns"]
position = Vector2( -900, -300 )
scale = Vector2( -1, 1 )

[node name="P2_Spawn" type="Position2D" parent="Spawns"]
position = Vector2( 900, -300 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.229797, -428 )
current = true
zoom = Vector2( 1.7, 1.7 )

[node name="Death_Zone" type="Area2D" parent="."]
position = Vector2( -2376, -475 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death_Zone"]
position = Vector2( -64, 0 )
shape = SubResource( 31 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Death_Zone"]
position = Vector2( 4827, 0 )
shape = SubResource( 31 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Death_Zone"]
position = Vector2( 2377, 1650.5 )
shape = SubResource( 32 )

[connection signal="body_entered" from="Hoop_left/Hoop_Goal" to="Hoop_left" method="_on_Hoop_Goal_body_entered"]
[connection signal="body_exited" from="Hoop_left/Hoop_Goal" to="Hoop_left" method="_on_Hoop_Goal_body_exited"]
[connection signal="timeout" from="Hoop_left/Timer" to="Hoop_left" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hoop_right/Hoop_Goal" to="Hoop_right" method="_on_Hoop_Goal_body_entered"]
[connection signal="body_exited" from="Hoop_right/Hoop_Goal" to="Hoop_right" method="_on_Hoop_Goal_body_exited"]
[connection signal="timeout" from="Hoop_right/Timer" to="Hoop_right" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Death_Zone" to="Death_Zone" method="_on_Death_Zone_body_entered"]
